Add notifications & evaluations, update APIs/DTOs
Introduce server-side notification and evaluation features and sync frontend DTOs/services accordingly. Added EvaluacionController and NotificacionController, Notificacion entity, repository, service interface and implementation; PostulacionService now updates estado and sends notifications. Exposed new API endpoints (evaluaciones, notificaciones, postulaciones state/listing, docentes active list) and extended various service interfaces and implementations. Added/updated many DTOs (activo flags, evaluacion/login/notificacion types) and implemented corresponding Angular services and methods. Fixed several repository query typos and switched JPA ddl-auto to update to allow schema changes.